--- a/week2/oj-server/package.json
+++ b/week2/oj-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.11.4"
+    "mongoose": "^4.11.4",
+    "socket.io": "^2.1.0"
   }
 }
