--- a/week3/oj-server/package.json
+++ b/week3/oj-server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongoose": "^4.11.4",
+    "node-rest-client": "^3.1.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.0"
   }
